k8s-mvp.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api
spec:
  selector:
    matchLabels:
      run: client-api
  replicas: 1
  template:
    metadata:
      labels:
        run: client-api
    spec:
      containers:
      - name: client-api
        image: okteto.dev/client-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-api
  labels:
    run: client-api
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: client-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loot-data
spec:
  selector:
    matchLabels:
      run: loot-data
  replicas: 1
  template:
    metadata:
      labels:
        run: loot-data
    spec:
      containers:
      - name: loot-data
        image: okteto.dev/loot-data
        ports:
        - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: loot-data
  labels:
    run: loot-data
spec:
  ports:
  - port: 8081
    protocol: TCP
  selector:
    run: loot-data
