k8s-client-api-v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api
spec:
  selector:
    matchLabels:
      run: client-api
  replicas: 1
  template:
    metadata:
      labels:
        run: client-api
    spec:
      containers:
      - name: client-api
        image: okteto.dev/client-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: client-api
  labels:
    run: client-api
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    run: client-api

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header x-okteto-divert loot-data:ramiro:1234;
  name: client-api-ramiro
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: client-api
          servicePort: 8080
        path: /
